@@ -1,5 +1,13 @@
 2013-02-18  Filip Pizlo  <fpizlo@apple.com>
 
+        Fix indention of Operations.h
+
+        Rubber stamped by Mark Hahnenberg.
+
+        * runtime/Operations.h:
+
+2013-02-18  Filip Pizlo  <fpizlo@apple.com>
+
         Remove DFG::SpeculativeJIT::isKnownNumeric(), since it's not called from anywhere.
 
         Rubber stamped by Andy Estes.
